--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,8 @@
 @import "tailwindcss";
+::-webkit-scrollbar {
+  height: 1px;
+}
+::-webkit-scrollbar-thumb {
+  background: #d0d0d0;
+  border-radius: 2px;
+}
